--- a/popup.css
+++ b/popup.css
@@ -219,3 +219,59 @@ body {
 	position: relative;
 	top: 20px;
 }
+
+.ref_button{
+	position: relative;
+	height: 25px;
+	width: 25px;
+	left: 80%;
+	margin: 10px;
+}
+
+#loading-indicator {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	top: 0;
+	left: 200px;
+	width: 100px;
+	height: 100px;
+	background: white;
+	z-index: 9999;
+  }
+  
+  .lds-hourglass {
+	display: inline-block;
+	position: relative;
+	width: 80px;
+	height: 80px;
+  }
+  
+  .lds-hourglass:after {
+	content: " ";
+	display: block;
+	border-radius: 50%;
+	width: 0;
+	height: 0;
+	margin: 6px;
+	box-sizing: border-box;
+	border: 26px solid #333;
+	border-color: orange transparent orange transparent; 
+	animation: lds-hourglass 1.2s infinite;
+  }
+  
+  @keyframes lds-hourglass {
+	0% {
+	  transform: rotate(0);
+	  animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+	}
+	50% {
+	  transform: rotate(900deg);
+	  animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+	}
+	100% {
+	  transform: rotate(1800deg);
+	}
+  }
+  
