--- a/popup.css
+++ b/popup.css
@@ -236,11 +236,18 @@ body {
 }
 
 .ref_button{
-	position: relative;
-	height: 25px;
-	width: 25px;
-	left: 80%;
-	margin: 10px;
+	position: absolute;
+	top: 5px;
+	width: 50px;
+	height: 50px;
+	font-size: 30px;
+	left: 90%;
+	border-style: none;
+	border-radius: 50%;
+	font-weight: bold;
+	background-color:transparent;
+	cursor: pointer;
+	pointer-events: painted;
 }
 
 #loading-indicator {
@@ -361,3 +368,64 @@ body {
 	box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
   }
   
+  .search-box{
+	width: fit-content;
+	height: fit-content;
+	position: relative;
+  }
+  .input-search{
+	height: 25px;
+	width: 0px;
+	border-style: none;
+	padding: 10px;
+	font-size: 18px;
+	letter-spacing: 2px;
+	outline: none;
+	border-radius: 25px;
+	transition: all .5s ease-in-out;
+	background-color: #22a6b3;
+	padding-right: 40px;
+	color:#fff;
+  }
+  .input-search::placeholder{
+	color:rgba(255,255,255,.5);
+	font-size: 18px;
+	letter-spacing: 2px;
+	pad: 5px;
+	font-weight: 100;
+  }
+  .btn-search{
+	width: 50px;
+	height: 50px;
+	border-style: none;
+	font-size: 20px;
+	font-weight: bold;
+	outline: none;
+	cursor: pointer;
+	border-radius: 50%;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	color:#ffffff ;
+	background-color:transparent;
+	pointer-events: painted;  
+  }
+  .btn-search:focus ~ .input-search{
+	width: 400px;
+	border-radius: 25px;
+	background-color: #22a6b3;
+	border-bottom:1px solid rgba(255,255,255,.5);
+	transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+  }
+  .input-search:focus{
+	width: 400px;
+	border-radius: 25px;
+	background-color: #22a6b3	;
+	border-bottom:1px solid rgba(255,255,255,.5);
+	transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+  }
+
+.container-top{
+	display: flex;
+	align-items: center;
+}
